--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+    <ul>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="materiel.html">Matériel</a></li>
+      <li><a href="conseils.html">Conseils</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
   <h1>Bienvenue sur mon site de pêche 🎣</h1>
   <p>Ce site a été codé à la main par moi-même !</p>
 </body>
