--- a/materiel.html
+++ b/materiel.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Mon Premeir Matériel</title>
+  <title>Mon Premier Matériel</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,6 +19,8 @@
   <main>
     <h1>Matériel recommandé</h1>
     <p>Ici, tu trouveras mes conseils pour bien choisir ton équipement.</p>
+    <img src="images/monobrin.jpg" alt="Photo de pêche">
+
   </main>
 </body>
 </html>
