--- a/conseils.html
+++ b/conseils.html
@@ -17,8 +17,30 @@
   </nav>
 
   <main>
-    <h1>Matériel recommandé</h1>
-    <p>Ici, tu trouveras mes conseils pour bien choisir ton équipement.</p>
+    <h1>Tes débuts en tant que pécheur</h1>
+    <p>Pour commencer, tu dois te demander ce que tu veux pécher ? 
+      De la truite ?  Du brochet ? De la carpe? Peut-être souhaites tu simplement pratiquer la pêche au coup ? 
+
+      Personellement, j'ai commencé à l'âge de 5 ans dans un étang privé. Il y avait un peu de carpe, de la tanche, mais surtout du gardon. 
+      Je m'amusais ainsi tous les soirs  attraper des gardons, que je stockais dans une bourriche pour que mon père les utilise comme vif(appat) le wek-end.
+      De temps à autre, j'avais une prise plus grosse, et là, ça devenait toujours un peu plus complexe (c'est ce qui rend la pêche charmante).
+
+      J'ai ainsi pu apprendre à férer, me servir d'une canne, utiliser un appat, bien le positionner sur l'ammeçon, faire mes premiers montages et mes premiers noeuds.
+      Pour moi c'est une base solide, mais rien ne vous empêche de commencer par pécher à la mouche et profiter de nos magnifiques rivières ! Rien n'est impossible à coeur vaillant. L'important est que vous aimiez ce que vous faites. 
+
+      Pour commencer, hors domaine privé, tu dois savoir qu'il te faut un permis pour avoir le droit de pécher. En fonction de ce que tu souhaites faire, tu dois choisir celui qui te conviens, mais les prix varient. 
+      Pour rester simple, tu as la carte de base pour personne majeure, qui te donne accès aux espace de 1ère et 2ème catégories (nous verront ça plus tard) mais uniquement dans ton département. Ensuite, tu as la carte interfédérale (tu entendras souvent parler de timbre halieutique) qui te donne accès à 91 départements, mais qu iest plus chère. 
+
+      Il y a  aussi des règles à respecter. Tu ne peux pas pêcher tous les poissons toutes l'année, et celà va dépendre de la catégorie du cours d'eau où tu te trouves. 
+      Les catégories des cours d'eau sont très bien décrite sur le site geopêche https://map.geopeche.com/#6.31/45.398/3.399 , où tu trouveras la catégorie de ton cours d'eau en passant la souris dessus (exiset aussi en appli mobile). 
+
+      En terme de règle, nous avons aussi des quotas journaliers (si tu ne pratique pas le nokill) et des tailles minimums pour le prélèvement.
+
+      Voici un tableau expliquant toutes les règles dont je t'ai parlé :
+      
+
+
+    </p>
   </main>
 </body>
 </html>
