--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     </ul>
   </nav>
   <h1>Bienvenue sur mon site de pêche 🎣</h1>
-  <p>Ce site a été codé à la main par moi-même !</p>
+  <p>Ce site existe afin de rendre accssible la pêche aux débutants. Vous y trouverez des conseils, des liens vers du matériel peu chère et vraiment intérréssant pour débuter. 
+  Celà fait près de 25 ans que je pratique, j'ai eu la chance d'apprendre avec mon père qui a su m'enseigner ses techniques. Quelle joie tous ces moments au bord de l'eau en sa compagnie  !
+
+  N'oubiez pas de vous faire plaisir tout en respectant la nature. Sans elle notre passion commune n'existerait pas.
+  La pêche est aussi une histoire de patiente et de chance. Souvent bredouille, je suis quand même content d'avoir pu profiter du paysage en faisant ed mon mieux pour rammener du poisson.</p>
 </body>
 </html>
