--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
     </ul>
   </nav>
   <h1>Bienvenue sur mon site de pêche 🎣</h1>
-  <p>Ce site existe afin de rendre accssible la pêche aux débutants. Vous y trouverez des conseils, des liens vers du matériel peu chère et vraiment intérréssant pour débuter. 
-  Celà fait près de 25 ans que je pratique, j'ai eu la chance d'apprendre avec mon père qui a su m'enseigner ses techniques. Quelle joie tous ces moments au bord de l'eau en sa compagnie  !
+  <p><p>
+  Ce site a pour but de rendre la pêche accessible aux débutants.  <br>
+  Vous y trouverez des conseils pratiques, ainsi que des liens vers du matériel abordable et vraiment intéressant pour bien démarrer.  <br>
+  Cela fait près de 25 ans que je pêche. J'ai eu la chance d'apprendre avec mon père, qui m’a transmis ses techniques.  <br>
+  Que de bons souvenirs au bord de l’eau en sa compagnie !<br><br>
 
-  N'oubiez pas de vous faire plaisir tout en respectant la nature. Sans elle notre passion commune n'existerait pas.
-  La pêche est aussi une histoire de patiente et de chance. Souvent bredouille, je suis quand même content d'avoir pu profiter du paysage en faisant ed mon mieux pour rammener du poisson.</p>
+  N’oubliez pas de vous faire plaisir tout en respectant la nature. <br>
+  Sans elle, notre passion commune n’existerait pas.  <br>
+  La pêche, c’est aussi une affaire de patience et de chance.  <br>
+  Je rentre souvent bredouille, mais heureux d’avoir profité du paysage et d’avoir donné le meilleur de moi-même.<br>
+</p>
+</p>
 </body>
 </html>
