--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </nav>
   <h1>Bienvenue sur mon site de pêche 🎣</h1>
   <p><p>
+    <img src="images/Lac du Deiro.jpg" alt = "Lac du Deiro" >
   Ce site a pour but de rendre la pêche accessible aux débutants.  <br>
   Vous y trouverez des conseils pratiques, ainsi que des liens vers du matériel abordable et vraiment intéressant pour bien démarrer.  <br>
   Cela fait près de 25 ans que je pêche. J'ai eu la chance d'apprendre avec mon père, qui m’a transmis ses techniques.  <br>
