--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
   </nav>
   <h1>Bienvenue sur mon site de pêche 🎣</h1>
   <p><p>
-    <img src="images/Lac du Deiro.jpg" alt = "Lac du Deiro" > <br><br>
+  
+
+    <img src="images/bannière.jpg" alt = "pêche" > <br><br>
+
   Ce site a pour but de rendre la pêche accessible aux débutants.  <br>
   Vous y trouverez des conseils pratiques, ainsi que des liens vers du matériel abordable et vraiment intéressant pour bien démarrer.  <br>
   Cela fait près de 25 ans que je pêche. J'ai eu la chance d'apprendre avec mon père, qui m’a transmis ses techniques.  <br>
   Que de bons souvenirs au bord de l’eau en sa compagnie !<br><br>
-
+    <img src="images/Lac du Deiro.jpg" alt = "Lac du Deiro" > <br><br>
   N’oubliez pas de vous faire plaisir tout en respectant la nature. <br>
   Sans elle, notre passion commune n’existerait pas.  <br>
   La pêche, c’est aussi une affaire de patience et de chance.  <br>
