--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <p><p>
   
 
-    <img src="images/bannière.png" alt = "pêche" > <br><br>
+    <img src="images/bannière.png" width="1380" height="330" alt = "pêche" > <br><br>
 
   Ce site a pour but de rendre la pêche accessible aux débutants.  <br>
   Vous y trouverez des conseils pratiques, ainsi que des liens vers du matériel abordable et vraiment intéressant pour bien démarrer.  <br>
